# task-tracker-cli

./: .gitignore  CMakeLists.txt  README.md  build.sh  makefile
include/: commands.hpp  status.hpp  task.hpp
include/managers/: TaskManager.hpp
include/operations/: TaskOperations.hpp
include/repository/: ITaskRepository.hpp  TaskRepositoryFileSystem.hpp  TaskRepositoryInMemory.hpp
src/: main.cpp
src/managers/: TaskManager.cpp
src/operations/: TaskOperations.cpp
src/repository/: TaskRepositoryFileSystem.cpp  TaskRepositoryInMemory.cpp
tests/unit-tests/: CMakeLists.txt  Environment.hpp.in  TaskOperationsTest.cpp  TaskRepositoryFileSystemTest.cpp
